--- a/cenobitorUtils/pom.xml
+++ b/cenobitorUtils/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>bos_mangement</artifactId>
+        <artifactId>bos</artifactId>
         <groupId>com.cenobitor</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>bos_mangement_service</artifactId>
+    <artifactId>cenobitorUtils</artifactId>
     <packaging>jar</packaging>
 
-    <name>bos_mangement_service</name>
+    <name>cenobitorUtils</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -18,18 +18,11 @@
     </properties>
 
     <dependencies>
-
         <dependency>
-            <groupId>com.cenobitor</groupId>
-            <artifactId>bos_mangement_dao</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.cenobitor</groupId>
-            <artifactId>cenobitorUtils</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-
     </dependencies>
 </project>
