完成自动下单和分单功能

--- a/bos_mangement/bos_mangement_web/src/main/webapp/WEB-INF/web.xml
+++ b/bos_mangement/bos_mangement_web/src/main/webapp/WEB-INF/web.xml
@@ -24,4 +24,15 @@
     <url-pattern>*.action</url-pattern>
   </filter-mapping>
 
+  <!--配置webService cxf-->
+  <servlet>
+    <servlet-name>cxf</servlet-name>
+    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>cxf</servlet-name>
+    <url-pattern>/webService/*</url-pattern>
+  </servlet-mapping>
+
 </web-app>
