--- a/pom.xml
+++ b/pom.xml
@@ -288,11 +288,13 @@
       <scope>compile</scope>
     </dependency>
     <!-- 缓存 -->
+    <!-- https://mvnrepository.com/artifact/net.sf.ehcache/ehcache -->
     <dependency>
       <groupId>net.sf.ehcache</groupId>
-      <artifactId>ehcache-core</artifactId>
-      <version>2.6.11</version>
+      <artifactId>ehcache</artifactId>
+      <version>2.10.4</version>
     </dependency>
+    <!--定时器-->
     <dependency>
       <groupId>org.quartz-scheduler</groupId>
       <artifactId>quartz</artifactId>
